--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/vite": "^4.0.6",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
