--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "cors": "^2.8.5",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9"
@@ -20,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "nodemailer": "^6.10.0"
   }
 }
